decreased dropout fraction + cleaned up model code

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Activation, Flatten, Dropout, Dense\n",
     "from tensorflow.keras.models import Sequential\n",
     "from keras import backend as K\n",
     " \n",
@@ -20,30 +20,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Conv2D(32, (2, 2), input_shape = input_shape))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Conv2D(32, (2, 2), activation = 'relu', input_shape = input_shape)) ## convolution of kernel with image\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2))) ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
     " \n",
-    "model.add(Conv2D(32, (2, 2)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Conv2D(32, (2, 2), activation = 'relu'))  ## convolution of kernel with image\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))  ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
     " \n",
-    "model.add(Conv2D(64, (2, 2)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    " \n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(64))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(4)) ## 4 output classes\n",
-    "model.add(Activation('sigmoid'))\n",
+    "model.add(Conv2D(64, (2, 2), activation = 'relu'))  ## convolution of kernel with image\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))  ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
+    "\n",
+    "model.add(Flatten()) ## transitions from convolutional to fully connected layers by converting the input from multi-dimensional --> 1D\n",
+    "model.add(Dense(64, activation = 'relu')) ## creates a fully connected layer with 64 output units (neurons)\n",
+    "model.add(Dropout(0.1)) ## this function randomly sets 10% of the input units to 0 at each training step; used to prevent overfitting\n",
+    "model.add(Dense(4, activation = 'sigmoid')) ## creates a fully connected layer with 4 output units (neurons) corresponding to the 4 output classes\n",
     "\n",
     "model.compile(loss = 'binary_crossentropy',\n",
     "              optimizer = 'rmsprop',\n",
@@ -51,8 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building the model (training on train data and building it to maximize accuracy on validation data)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -64,42 +74,39 @@
       "Found 4487 files belonging to 4 classes.\n",
       "Found 642 files belonging to 4 classes.\n",
       "Epoch 1/10\n",
-      "28/28 [==============================] - 4s 121ms/step - loss: 0.4731 - accuracy: 0.5357 - val_loss: 0.4333 - val_accuracy: 0.5469\n",
+      "28/28 [==============================] - 9s 252ms/step - loss: 9.4857 - accuracy: 0.4241 - val_loss: 0.5040 - val_accuracy: 0.5469\n",
       "Epoch 2/10\n",
-      "28/28 [==============================] - 3s 121ms/step - loss: 0.4623 - accuracy: 0.4799 - val_loss: 0.4294 - val_accuracy: 0.5312\n",
+      "28/28 [==============================] - 6s 210ms/step - loss: 0.4676 - accuracy: 0.5089 - val_loss: 0.4413 - val_accuracy: 0.4844\n",
       "Epoch 3/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4610 - accuracy: 0.5134 - val_loss: 0.4399 - val_accuracy: 0.4688\n",
+      "28/28 [==============================] - 6s 232ms/step - loss: 0.4663 - accuracy: 0.5379 - val_loss: 0.4375 - val_accuracy: 0.5469\n",
       "Epoch 4/10\n",
-      "28/28 [==============================] - 3s 123ms/step - loss: 0.4430 - accuracy: 0.5424 - val_loss: 0.4510 - val_accuracy: 0.5156\n",
+      "28/28 [==============================] - 6s 214ms/step - loss: 0.4388 - accuracy: 0.5491 - val_loss: 0.4124 - val_accuracy: 0.5781\n",
       "Epoch 5/10\n",
-      "28/28 [==============================] - 3s 122ms/step - loss: 0.4694 - accuracy: 0.5312 - val_loss: 0.4412 - val_accuracy: 0.5000\n",
+      "28/28 [==============================] - 6s 210ms/step - loss: 0.4453 - accuracy: 0.5290 - val_loss: 0.4151 - val_accuracy: 0.5781\n",
       "Epoch 6/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4404 - accuracy: 0.5603 - val_loss: 0.4437 - val_accuracy: 0.5000\n",
+      "28/28 [==============================] - 5s 196ms/step - loss: 0.4374 - accuracy: 0.5647 - val_loss: 0.4005 - val_accuracy: 0.5625\n",
       "Epoch 7/10\n",
-      "28/28 [==============================] - 3s 124ms/step - loss: 0.4498 - accuracy: 0.5223 - val_loss: 0.4046 - val_accuracy: 0.5312\n",
+      "28/28 [==============================] - 6s 203ms/step - loss: 0.4693 - accuracy: 0.5246 - val_loss: 0.3894 - val_accuracy: 0.5625\n",
       "Epoch 8/10\n",
-      "28/28 [==============================] - 8s 293ms/step - loss: 0.4462 - accuracy: 0.5379 - val_loss: 0.3794 - val_accuracy: 0.6094\n",
+      "28/28 [==============================] - 6s 212ms/step - loss: 0.4203 - accuracy: 0.5469 - val_loss: 0.4577 - val_accuracy: 0.4844\n",
       "Epoch 9/10\n",
-      "28/28 [==============================] - 4s 133ms/step - loss: 0.4266 - accuracy: 0.5312 - val_loss: 0.4109 - val_accuracy: 0.5781\n",
+      "28/28 [==============================] - 6s 213ms/step - loss: 0.4346 - accuracy: 0.5290 - val_loss: 0.4153 - val_accuracy: 0.5156\n",
       "Epoch 10/10\n",
-      "28/28 [==============================] - 4s 134ms/step - loss: 0.4459 - accuracy: 0.5536 - val_loss: 0.4310 - val_accuracy: 0.4531\n"
+      "28/28 [==============================] - 6s 215ms/step - loss: 0.4184 - accuracy: 0.5402 - val_loss: 0.4313 - val_accuracy: 0.4219\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1d66c203280>"
+       "<keras.callbacks.History at 0x21aa31517b8>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# previously we used the datagen.flow_from_directory function for ease of loading data for the model even though\n",
-    "# it is technically a data augmentation method; this may be outdated so let's try image_dataset_from_directory\n",
-    " \n",
     "train_data = tf.keras.utils.image_dataset_from_directory(\n",
     "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\train',\n",
     "    image_size = (img_width, img_height),\n",
