fixed merge issues + decreased dropout ratio

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "input_shape = (img_width, img_height, 3) ## we checked that the RGB channel comes last in the data format of these images\n",
     "\n",
     "epochs = 10\n",
-    "batch_size = 8"
+    "batch_size = 10"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -74,19 +74,34 @@
       "Found 4487 files belonging to 4 classes.\n",
       "Found 642 files belonging to 4 classes.\n",
       "Epoch 1/10\n",
-      "280/280 [==============================] - 70s 251ms/step - loss: 2.0440 - accuracy: 0.5179 - val_loss: 0.7257 - val_accuracy: 0.4984\n",
+      "44/44 [==============================] - 13s 232ms/step - loss: 25.1263 - accuracy: 0.2636 - val_loss: 0.5775 - val_accuracy: 0.2167\n",
       "Epoch 2/10\n",
-      "  1/280 [..............................] - ETA: 27s - loss: 3.3089 - accuracy: 0.7143WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 2800 batches). You may need to use the repeat() function when building your dataset.\n",
-      "280/280 [==============================] - 3s 9ms/step - loss: 3.3089 - accuracy: 0.7143 - val_loss: 0.5916 - val_accuracy: 0.2125\n"
+      "44/44 [==============================] - 7s 168ms/step - loss: 1.9105 - accuracy: 0.3818 - val_loss: 0.4706 - val_accuracy: 0.4500\n",
+      "Epoch 3/10\n",
+      "44/44 [==============================] - 7s 166ms/step - loss: 2.2199 - accuracy: 0.3636 - val_loss: 0.5140 - val_accuracy: 0.4167\n",
+      "Epoch 4/10\n",
+      "44/44 [==============================] - 9s 202ms/step - loss: 2.0192 - accuracy: 0.4636 - val_loss: 0.4517 - val_accuracy: 0.4167\n",
+      "Epoch 5/10\n",
+      "44/44 [==============================] - 8s 183ms/step - loss: 3.6406 - accuracy: 0.3864 - val_loss: 0.5717 - val_accuracy: 0.2333\n",
+      "Epoch 6/10\n",
+      "44/44 [==============================] - 7s 164ms/step - loss: 2.6146 - accuracy: 0.4318 - val_loss: 0.5866 - val_accuracy: 0.1167\n",
+      "Epoch 7/10\n",
+      "44/44 [==============================] - 7s 162ms/step - loss: 3.1528 - accuracy: 0.2932 - val_loss: 0.6501 - val_accuracy: 0.1333\n",
+      "Epoch 8/10\n",
+      "44/44 [==============================] - 7s 154ms/step - loss: 2.3529 - accuracy: 0.3477 - val_loss: 0.5435 - val_accuracy: 0.4667\n",
+      "Epoch 9/10\n",
+      "44/44 [==============================] - 7s 157ms/step - loss: 1.7546 - accuracy: 0.4614 - val_loss: 0.4502 - val_accuracy: 0.5167\n",
+      "Epoch 10/10\n",
+      "44/44 [==============================] - 7s 157ms/step - loss: 2.2855 - accuracy: 0.3955 - val_loss: 0.4273 - val_accuracy: 0.5167\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21aa2828710>"
+       "<keras.callbacks.History at 0x21aa61fd160>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,10 +127,10 @@
     " \n",
     "model.fit(\n",
     "    train_data,\n",
-    "    steps_per_epoch = 4487 // batch_size,\n",
-    "    epochs=epochs,\n",
+    "    steps_per_epoch = 4487 // (batch_size*epochs),\n",
+    "    epochs = epochs,\n",
     "    validation_data = validation_data,\n",
-    "    validation_steps = 642 // batch_size,\n",
+    "    validation_steps = 642 // (batch_size*epochs),\n",
     "    class_weight = {0: 4487/627, 1: 4487/44, 2: 4487/2240, 3: 4487/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
    ]
   },
@@ -161,8 +176,7 @@
     "img = img.reshape(1, 128, 128, 3)\n",
     "\n",
     "prediction = model.predict(img)\n",
-    "print(prediction)\n",
-    "print(\"Predicted Class: \", prediction[0][0])"
+    "print(prediction)"
    ]
   }
  ],
