hyperparameter and layer experimentation

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "input_shape = (img_width, img_height, 3) ## we checked that the RGB channel comes last in the data format of these images\n",
     "\n",
     "epochs = 10\n",
-    "batch_size = 10"
+    "batch_size = 16"
    ]
   },
   {
@@ -29,23 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Conv2D(32, (2, 2), activation = 'relu', input_shape = input_shape)) ## convolution of kernel with image\n",
+    "\n",
+    "# first convolutional layer \n",
+    "model.add(Conv2D(32, (4, 4), activation = 'relu', input_shape = input_shape)) ## convolution of kernel with image\n",
     "model.add(MaxPooling2D(pool_size=(2, 2))) ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
-    " \n",
-    "model.add(Conv2D(32, (2, 2), activation = 'relu'))  ## convolution of kernel with image\n",
+    "\n",
+    "# second convolutional layer\n",
+    "model.add(Conv2D(32, (4, 4), activation = 'relu'))  ## convolution of kernel with image\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))  ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
     " \n",
-    "model.add(Conv2D(64, (2, 2), activation = 'relu'))  ## convolution of kernel with image\n",
+    "# third convolutional layer\n",
+    "model.add(Conv2D(64, (4, 4), activation = 'relu'))  ## convolution of kernel with image\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))  ## reduces dimensionality in order to reduce computational cost + minimize overfitting\n",
     "\n",
     "model.add(Flatten()) ## transitions from convolutional to fully connected layers by converting the input from multi-dimensional --> 1D\n",
+    "\n",
+    "# first densely-connected layer \n",
     "model.add(Dense(64, activation = 'relu')) ## creates a fully connected layer with 64 output units (neurons)\n",
-    "model.add(Dropout(0.1)) ## this function randomly sets 10% of the input units to 0 at each training step; used to prevent overfitting\n",
+    "model.add(Dropout(0.2)) ## this function randomly sets 20% of the input units to 0 at each training step; used to prevent overfitting\n",
+    "\n",
+    "# second densely-connected layer \n",
+    "model.add(Dense(16, activation = 'relu')) ## creates a fully connected layer with 64 output units (neurons)\n",
+    "model.add(Dropout(0.2)) ## this function randomly sets 20% of the input units to 0 at each training step; used to prevent overfitting\n",
+    "\n",
+    "# third densely-connected layer \n",
     "model.add(Dense(4, activation = 'sigmoid')) ## creates a fully connected layer with 4 output units (neurons) corresponding to the 4 output classes\n",
     "\n",
     "model.compile(loss = 'binary_crossentropy',\n",
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -73,35 +85,55 @@
      "text": [
       "Found 4487 files belonging to 4 classes.\n",
       "Found 642 files belonging to 4 classes.\n",
-      "Epoch 1/10\n",
-      "44/44 [==============================] - 13s 232ms/step - loss: 25.1263 - accuracy: 0.2636 - val_loss: 0.5775 - val_accuracy: 0.2167\n",
-      "Epoch 2/10\n",
-      "44/44 [==============================] - 7s 168ms/step - loss: 1.9105 - accuracy: 0.3818 - val_loss: 0.4706 - val_accuracy: 0.4500\n",
-      "Epoch 3/10\n",
-      "44/44 [==============================] - 7s 166ms/step - loss: 2.2199 - accuracy: 0.3636 - val_loss: 0.5140 - val_accuracy: 0.4167\n",
-      "Epoch 4/10\n",
-      "44/44 [==============================] - 9s 202ms/step - loss: 2.0192 - accuracy: 0.4636 - val_loss: 0.4517 - val_accuracy: 0.4167\n",
-      "Epoch 5/10\n",
-      "44/44 [==============================] - 8s 183ms/step - loss: 3.6406 - accuracy: 0.3864 - val_loss: 0.5717 - val_accuracy: 0.2333\n",
-      "Epoch 6/10\n",
-      "44/44 [==============================] - 7s 164ms/step - loss: 2.6146 - accuracy: 0.4318 - val_loss: 0.5866 - val_accuracy: 0.1167\n",
-      "Epoch 7/10\n",
-      "44/44 [==============================] - 7s 162ms/step - loss: 3.1528 - accuracy: 0.2932 - val_loss: 0.6501 - val_accuracy: 0.1333\n",
-      "Epoch 8/10\n",
-      "44/44 [==============================] - 7s 154ms/step - loss: 2.3529 - accuracy: 0.3477 - val_loss: 0.5435 - val_accuracy: 0.4667\n",
-      "Epoch 9/10\n",
-      "44/44 [==============================] - 7s 157ms/step - loss: 1.7546 - accuracy: 0.4614 - val_loss: 0.4502 - val_accuracy: 0.5167\n",
-      "Epoch 10/10\n",
-      "44/44 [==============================] - 7s 157ms/step - loss: 2.2855 - accuracy: 0.3955 - val_loss: 0.4273 - val_accuracy: 0.5167\n"
+      "Epoch 1/20\n",
+      "14/14 [==============================] - 8s 514ms/step - loss: 3.1355 - accuracy: 0.2455 - val_loss: 0.5851 - val_accuracy: 0.2188\n",
+      "Epoch 2/20\n",
+      "14/14 [==============================] - 6s 409ms/step - loss: 3.2801 - accuracy: 0.1384 - val_loss: 0.5618 - val_accuracy: 0.1562\n",
+      "Epoch 3/20\n",
+      "14/14 [==============================] - 7s 536ms/step - loss: 1.6971 - accuracy: 0.3527 - val_loss: 0.4978 - val_accuracy: 0.3750\n",
+      "Epoch 4/20\n",
+      "14/14 [==============================] - 6s 453ms/step - loss: 1.5546 - accuracy: 0.4509 - val_loss: 0.4438 - val_accuracy: 0.6250\n",
+      "Epoch 5/20\n",
+      "14/14 [==============================] - 6s 414ms/step - loss: 2.1541 - accuracy: 0.3929 - val_loss: 0.5125 - val_accuracy: 0.3125\n",
+      "Epoch 6/20\n",
+      "14/14 [==============================] - 5s 383ms/step - loss: 2.2628 - accuracy: 0.3214 - val_loss: 0.5071 - val_accuracy: 0.3125\n",
+      "Epoch 7/20\n",
+      "14/14 [==============================] - 5s 394ms/step - loss: 2.7299 - accuracy: 0.3393 - val_loss: 0.5761 - val_accuracy: 0.0938\n",
+      "Epoch 8/20\n",
+      "14/14 [==============================] - 5s 349ms/step - loss: 1.5478 - accuracy: 0.3214 - val_loss: 0.4528 - val_accuracy: 0.5000\n",
+      "Epoch 9/20\n",
+      "14/14 [==============================] - 5s 359ms/step - loss: 2.7167 - accuracy: 0.3438 - val_loss: 0.5707 - val_accuracy: 0.2812\n",
+      "Epoch 10/20\n",
+      "14/14 [==============================] - 5s 372ms/step - loss: 2.9761 - accuracy: 0.1920 - val_loss: 0.5385 - val_accuracy: 0.3125\n",
+      "Epoch 11/20\n",
+      "14/14 [==============================] - 6s 415ms/step - loss: 2.0071 - accuracy: 0.3125 - val_loss: 0.5024 - val_accuracy: 0.5938\n",
+      "Epoch 12/20\n",
+      "14/14 [==============================] - 5s 386ms/step - loss: 3.2115 - accuracy: 0.2277 - val_loss: 0.5329 - val_accuracy: 0.2500\n",
+      "Epoch 13/20\n",
+      "14/14 [==============================] - 5s 389ms/step - loss: 2.5292 - accuracy: 0.2679 - val_loss: 0.5294 - val_accuracy: 0.4375\n",
+      "Epoch 14/20\n",
+      "14/14 [==============================] - 5s 374ms/step - loss: 2.5909 - accuracy: 0.4062 - val_loss: 0.4858 - val_accuracy: 0.4375\n",
+      "Epoch 15/20\n",
+      "14/14 [==============================] - 6s 457ms/step - loss: 2.8993 - accuracy: 0.2545 - val_loss: 0.5818 - val_accuracy: 0.1562\n",
+      "Epoch 16/20\n",
+      "14/14 [==============================] - 5s 371ms/step - loss: 2.1366 - accuracy: 0.1786 - val_loss: 0.5290 - val_accuracy: 0.1875\n",
+      "Epoch 17/20\n",
+      "14/14 [==============================] - 5s 367ms/step - loss: 1.8752 - accuracy: 0.3527 - val_loss: 0.5015 - val_accuracy: 0.3125\n",
+      "Epoch 18/20\n",
+      "14/14 [==============================] - 5s 374ms/step - loss: 2.3860 - accuracy: 0.3438 - val_loss: 0.5760 - val_accuracy: 0.1562\n",
+      "Epoch 19/20\n",
+      "14/14 [==============================] - 5s 392ms/step - loss: 2.8150 - accuracy: 0.2277 - val_loss: 0.4887 - val_accuracy: 0.4062\n",
+      "Epoch 20/20\n",
+      "14/14 [==============================] - 5s 389ms/step - loss: 2.1825 - accuracy: 0.3304 - val_loss: 0.6012 - val_accuracy: 0.1250\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21aa61fd160>"
+       "<keras.callbacks.History at 0x21aa5e5b3c8>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
