adding data augmentation + full model testing

--- a/Models/image_classification_model.ipynb
+++ b/Models/image_classification_model.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Activation, Flatten, Dropout, Dense\n",
     "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from keras import backend as K\n",
     " \n",
     "img_width, img_height = 128, 128\n",
@@ -24,16 +25,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating the model"
+    "### Creating the model (convolutional neural net)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
+    "model = Sequential() \n",
     "\n",
     "# first convolutional layer \n",
     "model.add(Conv2D(32, (4, 4), activation = 'relu', input_shape = input_shape)) ## convolution of kernel with image\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -83,78 +84,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 4487 files belonging to 4 classes.\n",
-      "Found 642 files belonging to 4 classes.\n",
-      "Epoch 1/20\n",
-      "14/14 [==============================] - 8s 514ms/step - loss: 3.1355 - accuracy: 0.2455 - val_loss: 0.5851 - val_accuracy: 0.2188\n",
-      "Epoch 2/20\n",
-      "14/14 [==============================] - 6s 409ms/step - loss: 3.2801 - accuracy: 0.1384 - val_loss: 0.5618 - val_accuracy: 0.1562\n",
-      "Epoch 3/20\n",
-      "14/14 [==============================] - 7s 536ms/step - loss: 1.6971 - accuracy: 0.3527 - val_loss: 0.4978 - val_accuracy: 0.3750\n",
-      "Epoch 4/20\n",
-      "14/14 [==============================] - 6s 453ms/step - loss: 1.5546 - accuracy: 0.4509 - val_loss: 0.4438 - val_accuracy: 0.6250\n",
-      "Epoch 5/20\n",
-      "14/14 [==============================] - 6s 414ms/step - loss: 2.1541 - accuracy: 0.3929 - val_loss: 0.5125 - val_accuracy: 0.3125\n",
-      "Epoch 6/20\n",
-      "14/14 [==============================] - 5s 383ms/step - loss: 2.2628 - accuracy: 0.3214 - val_loss: 0.5071 - val_accuracy: 0.3125\n",
-      "Epoch 7/20\n",
-      "14/14 [==============================] - 5s 394ms/step - loss: 2.7299 - accuracy: 0.3393 - val_loss: 0.5761 - val_accuracy: 0.0938\n",
-      "Epoch 8/20\n",
-      "14/14 [==============================] - 5s 349ms/step - loss: 1.5478 - accuracy: 0.3214 - val_loss: 0.4528 - val_accuracy: 0.5000\n",
-      "Epoch 9/20\n",
-      "14/14 [==============================] - 5s 359ms/step - loss: 2.7167 - accuracy: 0.3438 - val_loss: 0.5707 - val_accuracy: 0.2812\n",
-      "Epoch 10/20\n",
-      "14/14 [==============================] - 5s 372ms/step - loss: 2.9761 - accuracy: 0.1920 - val_loss: 0.5385 - val_accuracy: 0.3125\n",
-      "Epoch 11/20\n",
-      "14/14 [==============================] - 6s 415ms/step - loss: 2.0071 - accuracy: 0.3125 - val_loss: 0.5024 - val_accuracy: 0.5938\n",
-      "Epoch 12/20\n",
-      "14/14 [==============================] - 5s 386ms/step - loss: 3.2115 - accuracy: 0.2277 - val_loss: 0.5329 - val_accuracy: 0.2500\n",
-      "Epoch 13/20\n",
-      "14/14 [==============================] - 5s 389ms/step - loss: 2.5292 - accuracy: 0.2679 - val_loss: 0.5294 - val_accuracy: 0.4375\n",
-      "Epoch 14/20\n",
-      "14/14 [==============================] - 5s 374ms/step - loss: 2.5909 - accuracy: 0.4062 - val_loss: 0.4858 - val_accuracy: 0.4375\n",
-      "Epoch 15/20\n",
-      "14/14 [==============================] - 6s 457ms/step - loss: 2.8993 - accuracy: 0.2545 - val_loss: 0.5818 - val_accuracy: 0.1562\n",
-      "Epoch 16/20\n",
-      "14/14 [==============================] - 5s 371ms/step - loss: 2.1366 - accuracy: 0.1786 - val_loss: 0.5290 - val_accuracy: 0.1875\n",
-      "Epoch 17/20\n",
-      "14/14 [==============================] - 5s 367ms/step - loss: 1.8752 - accuracy: 0.3527 - val_loss: 0.5015 - val_accuracy: 0.3125\n",
-      "Epoch 18/20\n",
-      "14/14 [==============================] - 5s 374ms/step - loss: 2.3860 - accuracy: 0.3438 - val_loss: 0.5760 - val_accuracy: 0.1562\n",
-      "Epoch 19/20\n",
-      "14/14 [==============================] - 5s 392ms/step - loss: 2.8150 - accuracy: 0.2277 - val_loss: 0.4887 - val_accuracy: 0.4062\n",
-      "Epoch 20/20\n",
-      "14/14 [==============================] - 5s 389ms/step - loss: 2.1825 - accuracy: 0.3304 - val_loss: 0.6012 - val_accuracy: 0.1250\n"
+      "Found 4487 images belonging to 4 classes.\n",
+      "Found 642 images belonging to 4 classes.\n",
+      "Epoch 1/10\n",
+      "28/28 [==============================] - 19s 653ms/step - loss: 0.4910 - accuracy: 0.4375 - val_loss: 0.4243 - val_accuracy: 0.5625\n",
+      "Epoch 2/10\n",
+      "28/28 [==============================] - 17s 608ms/step - loss: 0.4977 - accuracy: 0.4152 - val_loss: 0.4391 - val_accuracy: 0.6094\n",
+      "Epoch 3/10\n",
+      "28/28 [==============================] - 14s 477ms/step - loss: 0.4568 - accuracy: 0.5201 - val_loss: 0.4485 - val_accuracy: 0.3594\n",
+      "Epoch 4/10\n",
+      "28/28 [==============================] - 15s 536ms/step - loss: 0.4736 - accuracy: 0.4732 - val_loss: 0.4264 - val_accuracy: 0.5781\n",
+      "Epoch 5/10\n",
+      "28/28 [==============================] - 17s 614ms/step - loss: 0.4510 - accuracy: 0.4844 - val_loss: 0.4260 - val_accuracy: 0.4688\n",
+      "Epoch 6/10\n",
+      "28/28 [==============================] - 15s 537ms/step - loss: 0.4522 - accuracy: 0.5112 - val_loss: 0.4251 - val_accuracy: 0.4844\n",
+      "Epoch 7/10\n",
+      "28/28 [==============================] - 17s 623ms/step - loss: 0.4613 - accuracy: 0.4888 - val_loss: 0.4370 - val_accuracy: 0.5000\n",
+      "Epoch 8/10\n",
+      "28/28 [==============================] - 15s 545ms/step - loss: 0.4515 - accuracy: 0.4888 - val_loss: 0.4363 - val_accuracy: 0.5312\n",
+      "Epoch 9/10\n",
+      "28/28 [==============================] - 18s 636ms/step - loss: 0.4328 - accuracy: 0.5223 - val_loss: 0.4448 - val_accuracy: 0.5000\n",
+      "Epoch 10/10\n",
+      "28/28 [==============================] - 19s 661ms/step - loss: 0.4507 - accuracy: 0.4799 - val_loss: 0.4317 - val_accuracy: 0.5625\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21aa5e5b3c8>"
+       "<keras.callbacks.History at 0x21abdbc0630>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = tf.keras.utils.image_dataset_from_directory(\n",
-    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\train',\n",
-    "    image_size = (img_width, img_height),\n",
+    "datagen = ImageDataGenerator(rotation_range=20, width_shift_range=0.1, height_shift_range=0.1, vertical_flip=True, rescale=1/255) \n",
+    "## this is the data augmentor that we will use to try to improve model accuracy, with the range of parameters/allowed modifications it can perform on each image\n",
+    "\n",
+    "train_data = datagen.flow_from_directory(\n",
+    "    directory = r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\train',\n",
+    "    target_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    labels = 'inferred',\n",
-    "    label_mode = 'categorical',\n",
-    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
+    "    class_mode = 'categorical',\n",
     "    seed = 112)\n",
     " \n",
-    "validation_data = tf.keras.utils.image_dataset_from_directory(\n",
+    "validation_data = datagen.flow_from_directory(\n",
     "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\val',\n",
-    "    image_size = (img_width, img_height),\n",
+    "    target_size = (img_width, img_height),\n",
     "    batch_size = batch_size,\n",
-    "    labels = 'inferred',\n",
-    "    label_mode = 'categorical',\n",
-    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
+    "    class_mode = 'categorical',\n",
     "    seed = 112)\n",
     " \n",
     "model.fit(\n",
@@ -162,13 +142,15 @@
     "    steps_per_epoch = 4487 // (batch_size*epochs),\n",
     "    epochs = epochs,\n",
     "    validation_data = validation_data,\n",
-    "    validation_steps = 642 // (batch_size*epochs),\n",
-    "    class_weight = {0: 4487/627, 1: 4487/44, 2: 4487/2240, 3: 4487/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
+    "    validation_steps = 642 // (batch_size*epochs))\n",
+    "\n",
+    "# removed class weights since these seem to decrease model performance\n",
+    "# class_weight = {0: 4487/627, 1: 4487/44, 2: 4487/2240, 3: 4487/1568}) ## these class weights are based on the train dataset (total train samples/train samples for class i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,39 +158,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the model (on completely reserved test data)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25720322]]\n",
-      "Predicted Class:  0.25720322\n"
+      "Found 1279 files belonging to 4 classes.\n",
+      "80/80 [==============================] - 9s 107ms/step - loss: 26.5733 - accuracy: 0.5317\n",
+      "Test loss: 26.573341369628906\n",
+      "Test accuracy: 0.5316653847694397\n"
      ]
     }
    ],
    "source": [
     "from keras.models import load_model\n",
-    "from keras.preprocessing.image import load_img\n",
-    "from keras.preprocessing.image import img_to_array\n",
-    "from keras.applications.vgg16 import preprocess_input\n",
-    "from keras.applications.vgg16 import decode_predictions\n",
-    "from keras.applications.vgg16 import VGG16\n",
-    "import numpy as np\n",
-    " \n",
-    "from keras.models import load_model\n",
-    " \n",
-    "model = load_model('CNN_model.h5')\n",
-    " \n",
-    "## let's test one of the mild demented images reserved in the training dataset\n",
-    "image = load_img(r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\_FINAL DATASETS\\alzheimer mri preprocessed dataset\\train_test_val split\\test\\Mild_Demented\\mild_55.jpg', target_size = (128, 128))\n",
-    "img = np.array(image) / 255\n",
-    "img = img.reshape(1, 128, 128, 3)\n",
     "\n",
-    "prediction = model.predict(img)\n",
-    "print(prediction)"
+    "test_data = tf.keras.utils.image_dataset_from_directory(\n",
+    "    r'C:\\Users\\lucia\\OneDrive - University of Calgary\\University\\Year 3\\Semester 2\\Bmen 415\\Coursework\\Course Project\\GitHub\\BMEN-415\\Data\\_split datasets\\image train_test_val split\\test',\n",
+    "    image_size = (img_width, img_height),\n",
+    "    batch_size = batch_size,\n",
+    "    labels = 'inferred',\n",
+    "    label_mode = 'categorical',\n",
+    "    class_names = ['Mild_Demented', 'Moderate_Demented', 'Non_Demented', 'Very_Mild_Demented'],\n",
+    "    seed = 112)\n",
+    "\n",
+    "# Load trained Keras model\n",
+    "model = load_model('CNN_model.h5')\n",
+    "\n",
+    "# Evaluate model on test data\n",
+    "loss, accuracy = model.evaluate(test_data)\n",
+    "print('Test loss:', loss)\n",
+    "print('Test accuracy:', accuracy)"
    ]
   }
  ],
